--- a/dis/css/main.css
+++ b/dis/css/main.css
@@ -1,5 +1,1 @@
-body {
-  background: blue;
-  color: red;
-}
-/*# sourceMappingURL=main.css.map */
+/* No CSS *//*# sourceMappingURL=main.css.map */
