--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,1 +1,161 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;800&display=swap");
 
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  background: #2b192f;
+  color: #fff;
+  font-family: "Montserrat", sans-serif;
+}
+
+a {
+  color: #fff;
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.hero-wrapper {
+  background: url("../../images/bg2.jpg");
+  background-size: cover;
+}
+
+.wrapper {
+  padding: 1.5em;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+
+  .logo {
+    font-weight: bold;
+  }
+
+  ul {
+    display: flex;
+
+    li a {
+      padding: 0 0.6em;
+    }
+  }
+}
+
+.hero-content {
+  margin: 4em 0 2em;
+
+  .subtitle {
+    margin-bottom: 0;
+  }
+}
+
+.light-purple-wrapper {
+  background: #351f3a;
+}
+
+.stats {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
+  justify-content: space-around;
+  margin-top: 2em;
+
+  li {
+    margin-bottom: 1.5em;
+  }
+
+  strong {
+    font-size: 1.4em;
+  }
+
+  span {
+    display: block;
+    text-transform: uppercase;
+    font-size: 0.75em;
+  }
+}
+
+.arrows {
+  display: none;
+}
+
+.extended-wrapper {
+  padding: 0 1.5em 2em;
+  max-width: 1230px;
+  margin: 0 auto;
+}
+
+.carousel {
+  margin-bottom: 1em;
+
+  li {
+    background: #422847;
+    padding: 1em;
+    margin-bottom: 1em;
+  }
+}
+
+blockquote {
+  margin: 0;
+  font-size: 0.8em;
+  line-height: 1.8em;
+  margin-bottom: 1em;
+}
+
+cite {
+  color: #e379ff;
+  font-weight: bold;
+  font-size: 0.8em;
+  font-style: normal;
+  position: relative;
+  padding-left: 25px;
+}
+
+cite::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 7px;
+  height: 1px;
+  width: 15px;
+  border-bottom: 1px solid #fff;
+}
+
+h2 {
+  text-align: center;
+  position: relative;
+}
+
+h2::before {
+  content: "";
+  position: absolute;
+  height: 5px;
+  width: 30px;
+  background: #b728dc;
+  top: -0.3em;
+}
+
+.companies {
+  text-align: center;
+  opacity: 0.4;
+
+  li {
+    margin: 2em 0;
+  }
+
+  .skillshare {
+    width: 100px;
+  }
+
+  .ps {
+    width: 200px;
+  }
+}
